Check OS platform and add special access string
r5272
2020-03-25

## NEW
1. Add checking for OS version in MarsProjectStarter and
   MarsProjectHeadlessStarter
   - Use System.getProperty("os.name").toLowerCase() to check for
   OS platform.
   - Append special access string to the command input when
     starting mars-sim.

## CHANGE
1. Adjust the initial value in the annual dose of radiation in
   initializeWithRandomDose() in RadiationExposure.